# flagops

./: LICENSE  README.md  alembic.ini  build_info.json  flagops.jmx  pyproject.toml  run-pg.sh
src/api/: main.py
src/api/admin/: db_interactions.py  router.py  schemas.py
src/common/: config.py  jwk_client.py  utils.py
src/common/featureflags/: models.py
src/migrations/: env.py
src/migrations/versions/: 2023_01_03_0446-3d377c28531f_added_feature_flag_table.py  2023_01_25_1541-a436e5a3a1f2_initial_models.py
src/tests/: conftest.py  test_admin_api.py
