[tool.poetry]
name = "flagops"
version = "0.1.0"
description = ""
authors = ["ajaykrishnan33 <akj1996@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
SQLAlchemy = "^1.4.45"
databases = {extras = ["asyncpg"], version = "^0.7.0"}
alembic = "^1.9.1"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
